--- a/src/Rookie.Ecom.Customer/Rookie.Ecom.Customer.csproj
+++ b/src/Rookie.Ecom.Customer/Rookie.Ecom.Customer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <Import Project="..\Directory.Build.props" />
   <PropertyGroup>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
@@ -20,6 +20,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Rookie.Ecom.Business\Rookie.Ecom.Business.csproj" />
     <ProjectReference Include="..\Rookie.Ecom.Contracts\Rookie.Ecom.Contracts.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\css\Page\" />
   </ItemGroup>
 
 </Project>
