+ ListProduct, ProdutDetail, SearchBYCate&Name

--- a/src/Rookie.Ecom.Admin/appsettings.Development.json
+++ b/src/Rookie.Ecom.Admin/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnection": "Server=LAPTOP-32R6HKKQ\\SQLEXPRESS;Database=assignment2;User Id=sa;Password=18112000;"
+    "DbConnection": "Server=LAPTOP-32R6HKKQ\\SQLEXPRESS;Database=ecom.rookie;User Id=sa;Password=d18112000;"
   }
 }
