--- a/src/Rookie.Ecom.Customer/Rookie.Ecom.Customer.csproj
+++ b/src/Rookie.Ecom.Customer/Rookie.Ecom.Customer.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
 	  <PackageReference Include="bootstrap-select" Version="1.13.18" />
 	  <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.1" />
+	  <PackageReference Include="IdentityServer4" Version="4.1.2" />
+	  <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
