--- a/src/Rookie.Ecom.Identity/appsettings.Development.json
+++ b/src/Rookie.Ecom.Identity/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DbConnection": "Server=LAPTOP-32R6HKKQ\\SQLEXPRESS;Database=ecom.rookie.identity;User Id=sa;Password=d18112000;"
   }
 }
